# dunward

./: Cargo.toml  README.md  Trunk.toml  justfile  rust-toolchain.toml
.cargo/: config.toml
renderer/: .gitignore  Cargo.toml  build.rs
renderer/shaders/: default.frag
renderer/src/: camera.rs  lib.rs  resource_storage.rs  resource_type.rs  shader_data.rs  utils.rs
renderer/src/context/: ash_desc_device.rs  desc_set_layout_builder.rs  device.rs  instance.rs  mod.rs  queue.rs  swapchain.rs  target.rs
renderer/src/context/commands/: cmd_encoder.rs  cmd_encoder_alloc.rs  mod.rs  transfer_cmd_encoder.rs
renderer/src/frame/: mod.rs  packet.rs
renderer/src/resources/: buffer.rs  image.rs  material.rs  megabuffer.rs  mesh.rs  mod.rs  model.rs  resource_type.rs  shader.rs  texture.rs  vertex.rs
renderer/src/storage/: mod.rs
renderer/src/viewport/: mod.rs  surface.rs  swapchain.rs
src/: assets.rs  game.rs  main.rs  ui.rs
src/game/: mod.rs
src/game/hex_tilemap/: mod.rs
src/game/init_game/: mod.rs
src/game/map_control/: mod.rs
src/game/scene_transition/: credits_screen.rs  game_scene.rs  loading_screen.rs  mod.rs  splash_screen.rs  title_screen.rs
src/game/spawn/: mod.rs
src/map_control/: mod.rs
src/plugins/diagnostics_overlay_plg/: mod.rs
src/plugins/map_control_plg/: mod.rs
src/render/: camera.rs  mod.rs  renderer.rs  schedules.rs  viewport.rs
src/render/renderer/: mod.rs
src/render/renderer/context/: instance.rs  mod.rs
src/scene_transition/: credits_screen.rs  loading_screen.rs  mod.rs  splash_screen.rs  title_screen.rs
src/ui/: commands_ext.rs  interaction.rs  mod.rs
src/ui/diagnostics_overlay/: mod.rs
web/: index.html  style.css
