[package]
name = "dunward"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.16.0"
