[package]
name = "dunward"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "dynamic_linking",
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "std",
    "sysinfo_plugin",
    "tonemapping_luts",
    "webgl2",
    "x11",
]

[dependencies]
bevy_asset_loader = "0.23.0"
bevy_ecs_tilemap = "0.16.0"
bevy_kira_audio = "0.23.0"
