[package]
name = "dunward"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[dependencies.bevy]
version = "0.16.1"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_gilrs",
    "bevy_image",
    "bevy_log",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "dynamic_linking",
    "multi_threaded",
    "std",
    "sysinfo_plugin",
    "x11",
]

[dependencies]
ash = "0.38.0"
bevy_asset_loader = "0.23.0"
bevy_kira_audio = "0.23.0"
